Add TLAB exhaustion detection for multi-threaded allocation issues
- Parse TLAB debug logs (-Xlog:gc+tlab=debug) for slow allocs, refills, waste%
- Detect high slow_alloc_ratio (>30%) indicating TLAB exhaustion
- Detect high waste percentage (>5%) indicating poorly sized TLABs
- Update README with special logging instructions for TLAB analysis
- 51 tests passing

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>